tests/regression/error/hw4_error13.correct
unary operator '!' requires boolean, found none
